api related with user such as login, signup, change name, change email, change password, change profile photo, get profile image developed and working

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "chat-application-api",
   "version": "1.0.0",
   "description": "This backed of chat application",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
